runs/github.com/i/ipython/ipython-in-depth/logs/test-notebook-2 - Autoawait in IPython.ipynb-2020-07-09T12.20.txt
[I 200709 12:32:44 inrepo:36] Testing notebook 2 - Autoawait in IPython.ipynb
[I 200709 12:32:45 inrepo:45] Found kernel python3
[I 200709 12:32:46 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
await sleep(5)
------------------

[0;36m  File [0;32m"<ipython-input-4-920ac5bc3075>"[0;36m, line [0;32m1[0m
[0;31m    await sleep(5)[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m 'await' outside function

SyntaxError: 'await' outside function (<ipython-input-4-920ac5bc3075>, line 1)


Container exited with status: {'Error': None, 'StatusCode': 1}
